--- a/templates/about.html
+++ b/templates/about.html
@@ -80,22 +80,16 @@
                   Languages
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <select name="lng">
-                    <option type="text" , value="ko">
-                      <a class="ko" href="/index_ko">한국어</a>
-                    </option>
-                    <option type="text" , value="en">
-                      <a class="en" href="/index">English</a>
-                    </option>
-                    <option type="text" , value="ja">
-                      <a class="ja" href="/index_ja">日本語</a>
-                    </option>
-                    <option type="text" , value="es">
-                      <a class="es" href="/index_es">español</a>
-                    </option>
-                    <option type="text" , value="zh-CN">
-                      <a class="zh-CN" href="/index_zh-CN">简体中文</a>
-                    </option>
+                  <select
+                    name="lng"
+                    onchange="if(this.value) location.href = this.value;"
+                  >
+                    <option type="text">--select--</option>
+                    <option type="text" , value="/home_ko">한국어</option>
+                    <option type="text" , value="/home">English</option>
+                    <option type="text" , value="/home_ja">日本語</option>
+                    <option type="text" , value="/home_es">español</option>
+                    <option type="text" , value="/home_zh-CN">简体中文</option>
                   </select>
                 </ul>
               </li>
@@ -128,14 +122,19 @@
                 >
                 Get Started? 🐶
               </h1>
-              림펫은 멀티캠퍼스 주관 "빅데이터 기반 지능형 서비스 개발과정"에서
-              수행한<br />
-              기업 요구사항 기반의 문제해결 팀 프로젝트입니다.<br />
-              반려견 커스텀 굿즈 제작을 위한 GAN 기반 cartoon stylization
-              상용서비스 개발이라는 주제로 진행된 프로젝트이며,<br />
-              2022년 4월 11일부터 동년 5월 5일까지 진행되었습니다.<br />
-              프로젝트에 대한 자세한 정보는 Contact 메뉴의 Notion을 참고해주시면
-              감사하겠습니다.
+              Limnpet was started to relieve the inconvenience of consumers<br />
+              who have to carry out separate drawing and goods production
+              services to produce custom pet printed goods.<br />
+              Our first goal is to convert dog pictures into various painting
+              styles.<br />
+              In addition, we have a dream to connect the converted pictures
+              into various services.<br />
+              For more information on the project, please refer to the
+              <a
+                href="https://limnpet.notion.site/LimnPet-537f6461d3234937ab94dee11671d22a"
+                >Notion</a
+              >
+              in the <a href="/contact">Contact</a> menu.
             </div>
           </div>
 
@@ -205,16 +204,16 @@
                 >
                 Are? 🐶
               </h1>
-              림펫 개발팀은 김한주, 성연재, 김민지, 송종호, 정영훈, 총 5명으로
-              이루어져있습니다.<br />
-              다양한 전공과 배경을 가진 팀원들이지만 하나의 목표를 함께 이루기
-              위해 노력하고 있습니다.<br />
-              인공지능은 더 이상 어렵고 낯설기만한 분야가 아니라, 개개인의 생활
-              속에 녹아들고 있습니다.<br />
-              저희는 이러한 인공지능을 이용해, 가족의 일원으로 여겨지는
-              반려동물에 대한 서비스를 제공하고자 합니다.<br />
-              반려견을 그려주는 서비스는 시작일 뿐입니다.<br />
-              앞으로 더욱 다양한 서비스를 제공할 수 있도록 노력하겠습니다.
+              The LimnPet development team have five members: Hanju Kim,
+              Yeon-Jae Seong, Min-Ji Kim, Jong-Ho Song, and Young-Hoon Jeong.<br />
+              Even if we majored in all different field, we are moving towards
+              one goal. <br />
+              Now, it is very easy to find AI services in our daily life.<br />
+              Therefore, through LimnPet, we are trying to serve AI services
+              about one of the family members, pet.<br />
+              A service that draws a pet is just the beginning.<br />
+              We will do our best to provide more diverse services in the
+              future.
             </div>
           </div>
         </div>
