--- a/templates/service.html
+++ b/templates/service.html
@@ -77,12 +77,16 @@
                   Languages
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <select name="lng">
-                    <option type="text" , value="ko"><a class="ko" href="/index_ko">한국어</a></option>
-                    <option type="text" , value="en"><a class="en" href="/index">English</a></option>
-                    <option type="text" , value="ja"><a class="ja" href="/index_ja">日本語</a></option>
-                    <option type="text" , value="es"><a class="es" href="/index_es">español</a></option>
-                    <option type="text" , value="zh-CN"><a class="zh-CN" href="/index_zh-CN">简体中文</a></option>
+                  <select
+                    name="lng"
+                    onchange="if(this.value) location.href = this.value;"
+                  >
+                    <option type="text">--select--</option>
+                    <option type="text" , value="/home_ko">한국어</option>
+                    <option type="text" , value="/home">English</option>
+                    <option type="text" , value="/home_ja">日本語</option>
+                    <option type="text" , value="/home_es">español</option>
+                    <option type="text" , value="/home_zh-CN">简体中文</option>
                   </select>
                 </ul>
               </li>
@@ -134,7 +138,7 @@
         <div style="text-align:center">
           <section>
             <div class="file-upload">
-              <form name="frm1" method="POST" enctype="multipart/form-data">
+              <form name="frm1" method="POST" enctype="multipart/form-data" onsubmit="return blocker()">
                 <div>Style Options</div>
                 <select name="style" class="select" style="text-align: center; display:inline">
                   <option value="hayao">Hayao</option>
@@ -166,9 +170,9 @@
                   </div>
                 </div>
                 <div id="submit_button">
-                  <input class="remove-image" value="Draw Style" type="submit" onClick="btn_click('draw');search();">
+                  <input class="remove-image" style="font-size: large;" value="Draw picture" type="submit" onClick="btn_click('draw');search();">
                   </input>
-                  <input class="remove-image" value="Improve Resolution" type="submit" onClick="btn_click('hires');search();">
+                  <input class="remove-image" style="font-size: large;" value="Improve Resolution" type="submit" onClick="btn_click('hires');search();">
                   </input>
                   <!-- <button class="remove-image" type="submit" onClick="location.href='/test';search();">
                     <span class="image-title">그림 그리기</span>
@@ -253,11 +257,6 @@
       }
       // 숨겨진 그림을 onclick으로 불러낼 함수
 
-      function search(){
-        $("#div_load_image").show();
-        $("#div_show").hide();
-      }
-
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
@@ -267,8 +266,21 @@
         }
         else{
           frm1.action="/hires";
+        }}
+    </script>
+    <script>
+      function blocker() {
+        theForm = document.frm1;
+        if (theForm.file.value == "") {
+          alert('사진을 넣어주세요')
+          return false;
         }
-      }
+        else {
+          $("#div_load_image").show();
+          $("#div_show").hide();
+
+        }
+      };
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
